Fixed WYSIWYG center alignment causing unusual borders in table previews

--- a/ghostwriter/static/css/styles.css
+++ b/ghostwriter/static/css/styles.css
@@ -256,7 +256,6 @@ hr {
 
 .center {
   text-align: center;
-  display: block;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
